--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
-    "gulp-browserify": "^0.5.1",
     "gulp": "^3.8.11",
+    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.5.2",
-    "react": "^0.12.2",
+    "material-ui": "^0.7.2",
+    "react": "^0.13.1",
+    "react-bootstrap": "^0.19.1",
     "reactify": "^1.0.0"
   },
   "devDependencies": {
