--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "nw": "^0.12.0",
         "react": "^0.13.1",
         "react-bootstrap": "^0.19.1",
-        "reactify": "^1.0.0"
+        "reactify": "^1.0.0",
+        "validator": "^3.37.0",
+        "lodash": "^3.6.0"
     },
     "devDependencies": {
         "es6-promise": "^2.0.1"
