--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-    "name": "LazyMine",
-    "version": "0.0.1",
-    "description": "",
-    "main": "gulpfile.js",
-    "dependencies": {
-        "gulp": "^3.8.11",
-        "gulp-browserify": "^0.5.1",
-        "gulp-concat": "^2.5.2",
-        "gulp-util": "~3.0.0",
-        "material-ui": "^0.7.3",
-        "node-webkit-builder": "^1.1.0",
-        "nw": "^0.12.0",
-        "react": "^0.13.1",
-        "react-bootstrap": "^0.19.1",
-        "reactify": "^1.0.0",
-        "validator": "^3.37.0",
-        "lodash": "^3.6.0"
-    },
-    "devDependencies": {
-        "es6-promise": "^2.0.1"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC"
+  "name": "LazyMine",
+  "version": "0.0.1",
+  "description": "",
+  "main": "gulpfile.js",
+  "dependencies": {
+    "gulp": "^3.8.11",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-util": "~3.0.0",
+    "lodash": "^3.6.0",
+    "material-ui": "^0.7.3",
+    "node-webkit-builder": "^1.1.0",
+    "nw": "^0.12.0",
+    "react": "^0.13.1",
+    "react-bootstrap": "^0.19.1",
+    "react-tween-state": "0.0.5",
+    "reactify": "^1.0.0",
+    "validator": "^3.37.0"
+  },
+  "devDependencies": {
+    "es6-promise": "^2.0.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
