--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "nw": "^0.12.0",
     "react": "^0.13.1",
     "react-bootstrap": "^0.19.1",
+    "react-router": "^0.13.2",
     "react-tween-state": "0.0.5",
     "reactify": "^1.0.0",
     "validator": "^3.37.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.6.5",
     "es6-promise": "^2.0.1"
   },
   "scripts": {
