--- a/package.json
+++ b/package.json
@@ -17,14 +17,21 @@
     "react-router": "^0.13.2",
     "react-tween-state": "0.0.5",
     "reactify": "^1.0.0",
-    "validator": "^3.37.0"
+    "validator": "^3.37.0",
+    "moment": "^2.10.2",
+    "jquery": "^2.1.4"
   },
   "devDependencies": {
     "browser-sync": "^2.6.5",
-    "es6-promise": "^2.0.1"
+    "es6-promise": "^2.0.1",
+    "karma": "~0.12.31",
+    "karma-jasmine": "~0.3.5",
+    "karma-chrome-launcher": "~0.1",
+    "karma-browserify": "~4.1.2",
+    "requirejs": "^2.1.17"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
   "author": "",
   "license": "ISC"
