Updated gulp build process. It takes more time now :D

--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
   "devDependencies": {
     "browser-sync": "^2.6.5",
     "es6-promise": "^2.0.1",
+    "gulp-clean": "^0.3.1",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-minify-css": "^1.1.1",
+    "gulp-uglify": "^1.2.0",
     "karma": "~0.12.31",
     "karma-browserify": "~4.1.2",
     "karma-chrome-launcher": "~0.1",
     "karma-jasmine": "~0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "requirejs": "^2.1.17"
+    "requirejs": "^2.1.17",
+    "run-sequence": "^1.1.0"
   },
   "scripts": {
     "test": "node_modules/karma/bin/karma start"
