--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
+    "easy-guid": "^0.1.3",
     "gulp": "^3.8.11",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.5.2",
     "gulp-util": "~3.0.0",
+    "jquery": "^2.1.4",
     "lodash": "^3.6.0",
     "material-ui": "^0.7.3",
+    "moment": "^2.10.2",
     "node-webkit-builder": "^1.1.0",
     "nw": "^0.12.0",
     "react": "^0.13.1",
@@ -17,9 +20,7 @@
     "react-router": "^0.13.2",
     "react-tween-state": "0.0.5",
     "reactify": "^1.0.0",
-    "validator": "^3.37.0",
-    "moment": "^2.10.2",
-    "jquery": "^2.1.4"
+    "validator": "^3.37.0"
   },
   "devDependencies": {
     "browser-sync": "^2.6.5",
