--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ language: node_js
 before_install:
   - npm install
 
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  
 script:
-  - gulp ci
+  - gulp build
