--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.10.2",
     "node-webkit-builder": "^1.1.0",
     "nw": "^0.12.0",
+    "prettify-error": "^0.1.1",
     "react": "^0.13.1",
     "react-bootstrap": "^0.19.1",
     "react-router": "^0.13.2",
