--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-webkit-builder": "^1.1.0",
     "nw": "^0.12.0",
     "prettify-error": "^0.1.1",
+    "random-material-color": "^1.0.1",
     "react": "^0.13.1",
     "react-bootstrap": "^0.19.1",
     "react-router": "^0.13.2",
