--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "LazyMine",
+  "name": "Lazymine",
   "version": "0.0.1",
-  "description": "",
+  "description": "Simple redmine portal for time entry",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Raathigesh/Lazymine.git"
+  },
   "main": "gulpfile.js",
   "dependencies": {
     "easy-guid": "^0.1.3",
-    "gulp": "^3.8.11",
-    "gulp-browserify": "^0.5.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-util": "~3.0.0",
     "jquery": "^2.1.4",
     "lodash": "^3.6.0",
     "material-ui": "^0.7.3",
     "moment": "^2.10.2",
-    "node-webkit-builder": "^1.1.0",
     "nw": "^0.12.0",
     "prettify-error": "^0.1.1",
     "random-material-color": "^1.0.2",
@@ -21,7 +20,6 @@
     "react-bootstrap": "^0.19.1",
     "react-router": "^0.13.2",
     "react-tween-state": "0.0.5",
-    "reactify": "^1.0.0",
     "rx": "^2.5.2",
     "validator": "^3.37.0"
   },
@@ -29,15 +27,18 @@
     "browser-sync": "^2.6.5",
     "browserify": "^10.2.0",
     "es6-promise": "^2.0.1",
-    "gulp-clean": "^0.3.1",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
     "gulp-minify-css": "^1.1.1",
+    "gulp-rimraf": "^0.1.1",
     "gulp-uglify": "^1.2.0",
+    "gulp-util": "~3.0.0",
     "karma": "~0.12.31",
     "karma-browserify": "~4.1.2",
     "karma-chrome-launcher": "~0.1",
     "karma-jasmine": "~0.3.5",
+    "node-webkit-builder": "^1.1.0",
     "reactify": "^1.1.1",
-    "requirejs": "^2.1.17",
     "run-sequence": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
@@ -45,6 +46,6 @@
   "scripts": {
     "test": "node_modules/karma/bin/karma start"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Lazymine Team",
+  "license": "MIT"
 }
