--- a/src/package.json
+++ b/src/package.json
@@ -7,8 +7,8 @@
     "window": {
         "icon": "assets/icon_128.png",
         "title": "Lazymine",
-        "frame": false,
-        "toolbar": false,
+        "frame": true,
+        "toolbar": true,
         "show_in_taskbar": true,
         "show": false,
         "always-on-top": false,
