Weekly view code updates.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "karma-browserify": "~4.1.2",
     "karma-chrome-launcher": "~0.1",
     "karma-jasmine": "~0.3.5",
-    "node-webkit-builder": "^1.1.0",
+    "nw-builder": "^2.0.2",
     "reactify": "^1.1.1",
     "run-sequence": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
