--- a/src/package.json
+++ b/src/package.json
@@ -4,11 +4,12 @@
     "description": "",
     "main": "index.html",
     "chromium-args": "--remember-cert-error-decisions --ignore-certificate-errors --ignore-urlfetcher-cert-requests",
+	"manifestUrl": "http://localhost:8080/nwUpdate/releases/package.json",
     "window": {
         "icon": "assets/icon_128.png",
         "title": "Lazymine",
-        "frame": false,
-        "toolbar": false,
+        "frame": true,
+        "toolbar": true,
         "show_in_taskbar": true,
         "show": false,
         "always-on-top": false,
