--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,14 @@
 {
     "name": "Lazymine",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "description": "",
     "main": "index.html",
     "chromium-args": "--remember-cert-error-decisions --ignore-certificate-errors --ignore-urlfetcher-cert-requests",
     "window": {
         "icon": "assets/icon_128.png",
         "title": "Lazymine",
-        "frame": false,
-        "toolbar": false,
+        "frame": true,
+        "toolbar": true,
         "show_in_taskbar": true,
         "show": false,
         "always-on-top": false,
